static/css: fix text align for reversed `select`
`text-align` for `select` doesn't work in Chrome

--- a/static/css/common.css
+++ b/static/css/common.css
@@ -223,7 +223,7 @@ select.reverse {
 	background-position: left;
 	padding-right: 0;
 	padding-left: 16px;
-	text-align: right;
+	text-align-last: right;
 }
 
 /* | Links */
